Add Sign and Verify logic to ElGamal