@@ -1,22 +1,29 @@
 import java.math.BigInteger;
+import java.nio.charset.StandardCharsets;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
+import java.security.SecureRandom;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
 /**
- * Security of the ElGamal algorithm depends on the difficulty of computing discrete logs
- * in a large prime modulus
+ * Security of the ElGamal algorithm depends on the difficulty of computing
+ * discrete logs in a large prime modulus
  *
- * - Theorem 1 : a in [Z/Z[p]] then a^(p-1) [p] = 1
- * - Theorem 2 : the order of an element split the order group
+ * - Theorem 1 : a in [Z/Z[p]] then a^(p-1) [p] = 1 - Theorem 2 : the order of
+ * an element split the order group
  */
 
 /*
- * Source and Credits to https://raw.githubusercontent.com/Ananasr/Cryptology/master/Crypto/src/main/elgamal/Elgamal.java
+ * Source and Credits to
+ * https://raw.githubusercontent.com/Ananasr/Cryptology/master/Crypto/src/main/
+ * elgamal/Elgamal.java
  * 
- * Implmented Signature :https://en.wikipedia.org/wiki/ElGamal_signature_scheme#Key_generation
- * */
+ * Implmented Signature
+ * :https://en.wikipedia.org/wiki/ElGamal_signature_scheme#Key_generation
+ */
 public final class ElGamal { // TODO extends Cryptosystem
 
     public static BigInteger TWO = new BigInteger("2");
@@ -24,10 +31,12 @@ public final class ElGamal { // TODO extends Cryptosystem
     /**
      * Generate the public key and the secret key for the ElGamal encryption.
      *
-     * @param n key size
+     * @param n
+     *            key size
      */
     public static List<List<BigInteger>> KeyGen(int n) {
-        // (a) take a random prime p with getPrime() function. p = 2 * p' + 1 with prime(p') = true
+        // (a) take a random prime p with getPrime() function. p = 2 * p' + 1
+        // with prime(p') = true
         BigInteger p = getPrime(n, 40, new Random());
         // (b) take a random element in [Z/Z[p]]* (p' order)
         BigInteger g = randNum(p, new Random());
@@ -53,8 +62,10 @@ public final class ElGamal { // TODO extends Cryptosystem
     /**
      * Encrypt ElGamal
      *
-     * @param (p,g,h) public key
-     * @param message message
+     * @param (p,g,h)
+     *            public key
+     * @param message
+     *            message
      */
     public static List<BigInteger> Encrypt(BigInteger p, BigInteger g, BigInteger h, BigInteger message) {
         BigInteger pPrime = p.subtract(BigInteger.ONE).divide(ElGamal.TWO);
@@ -67,8 +78,10 @@ public final class ElGamal { // TODO extends Cryptosystem
     /**
      * Encrypt ElGamal homomorphe
      *
-     * @param (p,g,h) public key
-     * @param message message
+     * @param (p,g,h)
+     *            public key
+     * @param message
+     *            message
      */
     public static List<BigInteger> Encrypt_Homomorph(BigInteger p, BigInteger g, BigInteger h, BigInteger message) {
         BigInteger pPrime = p.subtract(BigInteger.ONE).divide(ElGamal.TWO);
@@ -83,8 +96,10 @@ public final class ElGamal { // TODO extends Cryptosystem
     /**
      * Decrypt ElGamal
      *
-     * @param (p,x) secret key
-     * @param (gr,mhr) (g^r, m * h^r)
+     * @param (p,x)
+     *            secret key
+     * @param (gr,mhr)
+     *            (g^r, m * h^r)
      * @return the decrypted message
      */
     public static BigInteger Decrypt(BigInteger p, BigInteger x, BigInteger gr, BigInteger mhr) {
@@ -93,14 +108,18 @@ public final class ElGamal { // TODO extends Cryptosystem
     }
 
     /**
-     * Decrypt ElGamal homomorphe
-     * Remarque : il faudra quand m�me faire une recherche exhaustive de log discret (g^m)
-     * @param (p,x) secret key
-     * @param (gr,mhr) (g^r, h^r * g^m)
+     * Decrypt ElGamal homomorphe Remarque : il faudra quand même faire une
+     * recherche exhaustive de log discret (g^m)
+     * 
+     * @param (p,x)
+     *            secret key
+     * @param (gr,mhr)
+     *            (g^r, h^r * g^m)
      * @return the decrypted message
      */
-    public static BigInteger Decrypt_homomorphe(BigInteger p, BigInteger x, BigInteger g, BigInteger gr, BigInteger hrgm) {
-        BigInteger hr = gr.modPow(x,p);
+    public static BigInteger Decrypt_homomorphe(BigInteger p, BigInteger x, BigInteger g, BigInteger gr,
+            BigInteger hrgm) {
+        BigInteger hr = gr.modPow(x, p);
         BigInteger gm = hrgm.multiply(hr.modInverse(p)).mod(p);
 
         BigInteger m = BigInteger.ONE;
@@ -117,9 +136,12 @@ public final class ElGamal { // TODO extends Cryptosystem
     /**
      * Return a prime p = 2 * p' + 1
      *
-     * @param nb_bits   is the prime representation
-     * @param certainty probability to find a prime integer
-     * @param prg       random
+     * @param nb_bits
+     *            is the prime representation
+     * @param certainty
+     *            probability to find a prime integer
+     * @param prg
+     *            random
      * @return p
      */
     public static BigInteger getPrime(int nb_bits, int certainty, Random prg) {
@@ -145,8 +167,87 @@ public final class ElGamal { // TODO extends Cryptosystem
         return new BigInteger(N.bitLength() + 100, prg).mod(N);
     }
 
+    public static Pair<BigInteger, BigInteger> sign(String m, BigInteger p, BigInteger g, BigInteger x) {
+        // Choose a random k such that 1 < k < p − 1 and gcd(k, p − 1) = 1
+        Random rand = new SecureRandom();
+
+        BigInteger p_minus_1 = p.subtract(BigInteger.ONE);
+        int nlen = p_minus_1.bitLength();
+
+        BigInteger k = BigInteger.ZERO;
+        BigInteger r = BigInteger.ZERO;
+        BigInteger s = BigInteger.ZERO;
+        
+        do {
+            do {
+                k = new BigInteger(nlen, rand);
+            } while (!k.gcd(p_minus_1).equals(BigInteger.ONE));
+
+            // Compute r === g^k (mod p)
+            r = g.modPow(k, p);
+
+            // Compute s === (H(m) - xr)k^-1 (mod p - 1)
+            BigInteger hOfM = new BigInteger(SHA256(m));
+            BigInteger xr = x.multiply(r);
+            // H(m) - xr
+            BigInteger HOfM_minus_xr = hOfM.subtract(xr);
+            
+            s = HOfM_minus_xr.multiply(k.modInverse(p_minus_1));
+            s = s.mod(p_minus_1);
+            
+        } while (s.equals(BigInteger.ZERO));
+        
+        System.out.println(r);
+        System.out.println(s);
+
+        return new Pair<BigInteger, BigInteger>(r, s);
+    }
+    
+    public static boolean verify(String m, BigInteger r, BigInteger s, BigInteger y, BigInteger p, BigInteger g) {
+        
+        // 0 < r < p
+        // 0 < s < p-1
+        if (r.compareTo(BigInteger.ZERO) == 1 && p.compareTo(r) == 1 && s.compareTo(BigInteger.ZERO) == 1  && p.subtract(BigInteger.ONE).compareTo(s) == 1 ){
+            System.out.println("Verifiable");
+        }
+        
+        
+        BigInteger rhs = (y.modPow(r, p)).multiply(r.modPow(s, p));
+        rhs = rhs.mod(p);
+        System.out.println(rhs);
+        BigInteger hOfM = new BigInteger(SHA256(m));
+        BigInteger lhs = g.modPow(hOfM, p);
+        System.out.println(lhs);
+        return lhs.equals(rhs);
+    }
+
+    public static byte[] SHA256(String str) {
+
+        try {
+            MessageDigest digest;
+            digest = MessageDigest.getInstance("SHA-256");
+            return digest.digest(str.getBytes(StandardCharsets.UTF_8));
+        } catch (NoSuchAlgorithmException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        }
+
+        return null;
+    }
+
+    private static String bytesToHex(byte[] hash) {
+        StringBuffer hexString = new StringBuffer();
+        for (int i = 0; i < hash.length; i++) {
+            String hex = Integer.toHexString(0xff & hash[i]);
+            if (hex.length() == 1)
+                hexString.append('0');
+            hexString.append(hex);
+        }
+        return hexString.toString();
+    }
+
     public static void main(String[] args) {
-        List<List<BigInteger>> pksk = ElGamal.KeyGen(512);
+        List<List<BigInteger>> pksk = ElGamal.KeyGen(256);
         // public key
         BigInteger p = pksk.get(0).get(0);
         BigInteger g = pksk.get(0).get(1);
@@ -154,8 +255,19 @@ public final class ElGamal { // TODO extends Cryptosystem
         // secret key
         BigInteger p_sk = pksk.get(1).get(0);
         BigInteger x = pksk.get(1).get(1);
-        System.out.println("Message : 12");
-        List<BigInteger> encrypt = ElGamal.Encrypt_Homomorph(p, g, h, new BigInteger("12"));
-        System.out.println("Decrypted : " + ElGamal.Decrypt_homomorphe(p_sk, x, g, encrypt.get(0), encrypt.get(1)));
+        // System.out.println("Message : 12");
+        // List<BigInteger> encrypt = ElGamal.Encrypt_Homomorph(p, g, h, new
+        // BigInteger("12"));
+        // System.out.println("Decrypted : " + ElGamal.Decrypt_homomorphe(p_sk,
+        // x, g, encrypt.get(0), encrypt.get(1)));
+
+        String m = "hello_world!3230";
+        
+        Pair<BigInteger, BigInteger> rs = sign(m, p, g, x);
+        
+        BigInteger r = rs.getFirst();
+        BigInteger s = rs.getSecond();
+        
+        System.out.println(verify(m, r, s, h, p, g));
     }
 }
